<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/bgsplashlowreso">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipoint_isecure"
        android:id="@+id/textView"
        android:layout_marginBottom="202dp"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabernator"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:id="@+id/imageView"
        android:background="@mipmap/iconbg"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/splashicon"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="37dp"
        android:indeterminate="false"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/textView4"
        android:layout_below="@+id/progressBar"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="18dp"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

</RelativeLayout>